--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 set(COMPONENT_SRCS "ota_server.c")
 set(COMPONENT_ADD_INCLUDEDIRS "include")
+set(COMPONENT_REQUIRES
+  "app_update"
+)
 
 register_component()
